--- a/tcl/report.tcl.in
+++ b/tcl/report.tcl.in
@@ -338,7 +338,7 @@ proc formatErrStackTrace {errmsg loc {cmdlist {}}} {
    }
 
    # define commands to filter out from bottom of stack
-   set filtercmdendlist [list {eval $modcontent} "source $loc" {uplevel 1\
+   set filtercmdendlist [list {eval $mod_content} "source $loc" {uplevel 1\
       source $siteconfig} {eval $cachecontent}]
    # define commands to filter out from middle of stack
    set filtercmdmidlist [list {interp eval $itrp $::source_cache($filename)}]
